2004-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.h,
	* src/hc08/gen.c (storeRegToAop, aopOp, aopAdrStr, accopWithAop,
	rmwWithAop): Ported my 2004-10-02 fix for bug #663539 to the hc08,
	thus fixing bug #895406

2004-02-11 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/_modsint.c,
	* device/lib/_modslong.c: sign follows divisor only
	* src/hc08/gen.c (genMultOneByte): if result size is 1,
	signs or signedness can be ignored
	* src/SDCCast.c (addCast): cosmetic - added lineno to CAST
	* src/SDCCast.c (resultTypePropagate): added even more ops: +, - and *,
	added optimization for IFX,
	(decorateType): Mult/Div/ModOneByte ops can handle all kind of signed
	arguments;
	reenabled optimization for IFX, which was removed on 2004-01-11
	* src/SDCCast.h: added return type IFX
	* src/SDCCicode.c: Mult/Div/ModOneByte ops can handle all kind of signed
	arguments with 8 or 16 bit results; pic14 and pic16 ports use old
	promotion behaviour; env. var. SDCC_NEWONEBYTEOPS selects the new,
	SDCC_OLDONEBYTEOPS selects the old behaviour
	* src/SDCCsymt.c (computeType): type2 can be NULL (for LEFT_OP);
	changed again and commented promotion rule (it's still not perfect)
	* src/SDCCval.c (valDiv): promotion no longer necessary
	* src/ds390/gen.c (genMultOneByte) (genDivOneByte) (genModOneByte),
	* src/mcs51/gen.c (genMultOneByte) (genDivOneByte) (genModOneByte):
	rewritten
	* support/regression/tests/onebyte.c: added

2004-02-11 Vangelis Rokas <vrokas AT otenet.gr>

	* gen.c (genInline): reverted to old code for assemnling inline
	code because of bug reported James Chadd

2004-02-10 Vangelis Rokas <vrokas AT otenet.gr>

	* ralloc.h: missing declarations from previous patch,
	seems that patch for ralloc.h was never applied, fixed
	
2004-02-10 Hans-Juergen Dorn <hans.dorn AT apl-landau.de>
	   patch committed by Vangelis Rokas <vrokas AT otenet.gr>

	* pcode.c,
	* pcode.h,
	* ralloc.h: added FSR0L, FSR0H and other missing PIC16 SFR's for